t: Integração YOLOv8 + pipeline IA com RabbitMQ, Redis, CORS e organização de datasets
- Integrado modelo YOLOv8 (onnx) com detecção facial via OpenCV
- Criado pipeline assíncrono com RabbitMQ para processar vídeos e imagens
- Implementado método unificado: detecção facial + extração de embeddings + reconhecimento facial
- Vetores faciais armazenados em banco e utilizados para reconhecimento futuro
- Integração com ONNX Runtime para inferência de características faciais
- Configurado cache Redis para otimizar status de processamento e evitar redundâncias
- Adicionado serviço de controle de status via Redis com expiração automática
- Implementado CORS global permitindo integração segura com frontend externo
- Refatoração da camada de serviços para suporte modular e log detalhado por ID
- Criado listener OpenCVRabbitListener com fallback, ack manual e logging
- Adicionado script para organizar datasets desestruturados no formato de treino YOLOv8
- Otimização de uso de disco no Colab com movimentação direta dos arquivos
- Suporte a continuação de treino de modelo .pt YOLO com checkpoint
- Ajustes em filtros Jackson e mapeamento DTO na API REST
- Suporte a vídeos grandes com controle de memória e fallback seguro

Inclui:
- Detecção, extração e salvamento facial em uma única operação
- Organização automática de datasets (pastas como `1-1004`, `facas`, etc.)
- CORS liberado para desenvolvimento local e integração frontend
- Cache Redis com TTL para status de tarefas em background